--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,7 +36,7 @@ jobs:
       - name: Deploy
         uses: burnett01/rsync-deployments@6.0.0
         with:
-          switches: -avPh --delete
+          switches: -avPh --delete --exclude=.htaccess
           path: public/
           remote_path: ~/public_html/new
           remote_host: tsunami.ocf.berkeley.edu
