--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,9 @@ jobs:
       - name: Build website for production
         run: nix build .#for-production
 
+      - name: Test
+        run: ls -al
+
       - name: Deploy
         uses: burnett01/rsync-deployments@6.0.0
         with:
