--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,9 +8,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    environment:
-      name: Production
-      url: https://berkeley.mt/
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
@@ -35,6 +32,7 @@ jobs:
 
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     environment:
       name: Production
       url: https://berkeley.mt/
