--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -30,7 +30,7 @@ jobs:
           name: result
           path: result/
 
-  deploy:
+  deploy-ocf:
     runs-on: ubuntu-latest
     needs: build
     environment:
@@ -51,3 +51,23 @@ jobs:
           remote_host: tsunami.ocf.berkeley.edu
           remote_user: bmt
           remote_key: ${{ secrets.SSH_PRIVATE_KEY }}
+
+  deploy-cf-pages:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: Cloudflare Pages
+      url: https://berkeley-mt.pages.dev
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: result
+
+      - name: Deploy to Cloudflare Pages
+        uses: cloudflare/pages-action@v1
+        with:
+          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          accountId: 44d0498f26e72b3e24b3ba9d152ca879
+          projectName: berkeley-mt
+          directory: .
